# coriolis-pdk-gf180mcu-c4m

./: README.rst  build-LIP6.sh  build-devs.sh  meson.build  pyproject.toml
libs.ref/StdCell3V3Lib/gds/: StdCell3V3Lib.gds  a2_x2.gds  a3_x2.gds  a4_x2.gds  ao22_x2.gds  buf_x1.gds  buf_x2.gds  buf_x4.gds  decap_w0.gds  diode_w1.gds  fill.gds  fill_w2.gds  fill_w4.gds  inv_x0.gds  inv_x1.gds  inv_x2.gds  inv_x4.gds  mx2_x2.gds  mx3_x2.gds  nand2_x0.gds  nand3_x0.gds  nand4_x0.gds  nor2_x0.gds  nor3_x0.gds  nor4_x0.gds  nsnrlatch_x1.gds  nxr2_x1.gds  o2_x2.gds  o3_x2.gds  o4_x2.gds  oa22_x2.gds  one_x1.gds  powmid_x0.gds  sff1_x4.gds  sff1r_x4.gds  tie.gds  tie_diff.gds  tie_diff_w2.gds  tie_diff_w4.gds  tie_poly.gds  (+7 more)
libs.ref/StdCell3V3Lib/liberty/: StdCell3V3Lib_fast.lib  StdCell3V3Lib_fast_raw.lib  StdCell3V3Lib_nom.lib  StdCell3V3Lib_nom_raw.lib  StdCell3V3Lib_slow.lib  StdCell3V3Lib_slow_raw.lib
libs.ref/StdCell3V3Lib/spice/: StdCell3V3Lib.spi  a2_x2.spi  a2_x2_hier.spi  a3_x2.spi  a3_x2_hier.spi  a4_x2.spi  a4_x2_hier.spi  ao22_x2.spi  ao22_x2_hier.spi  buf_x1.spi  buf_x1_hier.spi  buf_x2.spi  buf_x2_hier.spi  buf_x4.spi  buf_x4_hier.spi  decap_w0.spi  decap_w0_hier.spi  inv_x0.spi  inv_x0_hier.spi  inv_x1.spi  inv_x1_hier.spi  inv_x2.spi  inv_x2_hier.spi  inv_x4.spi  inv_x4_hier.spi  mx2_x2.spi  mx2_x2_hier.spi  mx3_x2.spi  mx3_x2_hier.spi  nand2_x0.spi  nand2_x0_hier.spi  (+34 more)
libs.tech/coriolis/: StdCell3V3Lib.py  StdCell3V3Lib_fix.py  StdCell5V0Lib.py  StdCell5V0Lib_fix.py  __init__.py  iolib.py
packaging/: coriolis-pdk-gf180mcu-c4m.dsc  coriolis-pdk-gf180mcu-c4m.spec  debian.changelog  debian.control  debian.copyright  debian.rules  uploadOBS.sh  uploadUtils.sh
(+238 files in other folders)
